--- a/app/(pages)/department/department.css
+++ b/app/(pages)/department/department.css
@@ -1,6 +1,6 @@
 .deptlayout{
     padding-top: 80px;
-    background: url("../../public/feature background.png");
+    background: url("../../../public/feature background.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
